[gd_scene load_steps=11 format=2]

[ext_resource path="res://recursos/Enemies/idle20002.png" type="Texture" id=1]
[ext_resource path="res://recursos/Enemies/idle20003.png" type="Texture" id=2]
[ext_resource path="res://recursos/Enemies/idle20004.png" type="Texture" id=3]
[ext_resource path="res://scripts/mago.gd" type="Script" id=4]
[ext_resource path="res://recursos/Enemies/idle20000.png" type="Texture" id=5]
[ext_resource path="res://recursos/Enemies/idle20001.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 2 ) ],
"loop": true,
"name": "shoot",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 41, 59 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 511.5, 50.5 )

[sub_resource type="CapsuleShape2D" id=4]
radius = 49.0
height = 40.0

[node name="mago" type="KinematicBody2D"]
position = Vector2( 1, -158 )
collision_mask = 2
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 4, 76 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 98 )
shape = SubResource( 2 )

[node name="spawnSpell" type="Position2D" parent="."]
position = Vector2( 60, 72 )

[node name="playerDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerDetector"]
position = Vector2( 0.5, 93.5 )
scale = Vector2( -1, 1 )
shape = SubResource( 3 )

[node name="mago" type="Area2D" parent="."]
position = Vector2( 2, 93 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="mago"]
position = Vector2( 0, 1 )
shape = SubResource( 4 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="playerDetector" to="." method="_on_playerDetector_area_entered"]
[connection signal="body_entered" from="playerDetector" to="." method="_on_playerDetector_body_entered"]
[connection signal="body_exited" from="playerDetector" to="." method="_on_playerDetector_body_exited"]
[connection signal="area_entered" from="mago" to="." method="_on_mago_area_entered"]
